# math-derivation-engine

./: .gitignore  CONTRIBUTING.md  LICENSE  METHOD_STEP_SOURCES.md  README.md  pyproject.toml
examples/: agent_flow_demo.py  bondi_christoffel.py  demo_trace.py  exam_solver.py  m1_recognize_demo.py  meijerg_demo.py  recognize_to_explain.py  schwarzschild_transform.py  solve_integral.py  tensor_curl_grad.py  verify_corpus.py
src/integral_explainer/: __init__.py  coverage.py  curvature.py  derivation.py  executor.py  external_gates.py  gap_finder.py  gap_strategies.py  library.py  methods.py  oracle.py  problem.py  problem_graph.py  proposer.py  search.py  special_methods.py  strategies.py  trace.py
src/integral_explainer/explanations/: __init__.py  abel_plana.py  airy.py  analytic_continuation.py  asymptotic_expansion.py  bessel_hankel.py  casimir.py  complete_square_sub.py  confluent_0F1.py  conformal_block.py  conformal_casimir.py  contour.py  dilogarithm.py  dim_reg.py  euler_maclaurin.py  feynman_parameter.py  gamma_ratio_asymptotic.py  hyperbolic_exp_rewrite.py  inverse_function_parts.py  jacobi_trudi.py  komar_mass.py  (+12 more)
tests/: FULL_SUITE_LOG.md  _table_gates_data.py  conftest.py  run_full_suite.py  test_explanations.py  test_external_gates.py  test_gaps.py  test_levels.py  test_library.py  test_m1.py  test_paper_canonical_quant.py  test_paper_distributions.py  test_paper_gates.py  test_paper_hs_algebra.py  test_paper_kashaev.py  test_perf.py  test_search_coverage.py  test_step_guides.py  test_table_gates.py  test_table_gates_full.py
tests/papers/: manifest.md
